--- a/2do_Proyecto_Analisis/2do_Proyecto_Analisis.csproj
+++ b/2do_Proyecto_Analisis/2do_Proyecto_Analisis.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Datos.cs" />
     <Compile Include="Horarios.cs" />
     <Compile Include="Leccion.cs" />
+    <Compile Include="PMX.cs" />
     <Compile Include="Profesor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
